# TerrifyingTurtles

awesome_package/: CMakeLists.txt  package.xml
awesome_package/launch/: first_simulation.launch
awesome_package/nodes/: depth_setpoint.py  motor_command_sender.py  thrust_controller.py
bluerov_sim/: CMakeLists.txt
bluerov_sim/launch/: assignment_3.launch  example_apriltag_world.launch  keyboard_control.launch  spawn_vehicle.launch
bluerov_sim/models/uuv_bluerov2_heavy/: uuv_bluerov2_heavy.sdf
bluerov_sim/models/uuv_bluerov2_heavy_cam/: uuv_bluerov2_heavy_cam.sdf
bluerov_sim/nodes/: keyboard_control.py
depth_controller/: CMakeLists.txt  package.xml
depth_controller/cfg/: PidControl.cfg
depth_controller/launch/: depth_control.launch
depth_controller/nodes/: depth_calculator.py  depth_setpoint.py  thrust_controller.py
